--- a/archivo1.html
+++ b/archivo1.html
@@ -16,7 +16,7 @@
 
         var image = new Image(); //Se define la variable de tipo imagén
         image.onload = imageLoaded;
-        image.src = "gato.jpeg";
+        image.src = "ima.jpeg";
 
         function imageLoaded(){
             var canvas = document.getElementById("canvas")
