--- a/kernel.html
+++ b/kernel.html
@@ -257,7 +257,137 @@
                         [1, 0, -1],
                         [0, -1, -2]
                     ]
-                }
+                },
+                {
+                    nombre: "sw/edge",
+                    vertical: [
+                        [0, 1, 2],
+                        [-1, 0, 1],
+                        [-2,-1, 0]
+                    ],
+                    horizontal: [
+                        [0, 1, 2],
+                        [-1, 0, 1],
+                        [-2, -1, 0]
+                    ]
+                },
+                {
+                    nombre: "matrix7",
+                    vertical: [
+                        [2, -1, 0],
+                        [-1, 0, -1],
+                        [0,-1, 0]
+                    ],
+                    horizontal: [
+                        [-1, -2, -1],
+                        [-2, 9, -2],
+                        [-1, -2, -1]
+                    ]
+                },
+                {
+                    nombre: "matrix8",
+                    vertical: [
+                        [1/9, 1/9, 1/9],
+                        [1/9, 1/9, 1/9],
+                        [1/9, 1/9, 1/9]
+                    ],
+                    horizontal: [
+                        [1/9, 1/9, 1/9],
+                        [1/9, 1/9, 1/9],
+                        [1/9, 1/9, 1/9]
+                    ]
+                },
+                {
+                    nombre: "matrix9",
+                    vertical: [
+                        [1/7, 1/7, 1/7],
+                        [1/7, 1/7, 1/7],
+                        [1/7, 1/7, 1/7]
+                    ],
+                    horizontal: [
+                        [1/7, 1/7, 1/7],
+                        [1/7, 1/7, 1/7],
+                        [1/7, 1/7, 1/7]
+                    ]
+                },
+                {
+                    nombre: "matrix9",
+                    vertical: [
+                        [1/2, 1/2, 1/2],
+                        [0, 0, 0],
+                        [1/7, 1/7, 1/7]
+                    ],
+                    horizontal: [
+                        [1/7, 1/7, 1/7],
+                        [1/7, 1/7, 1/7],
+                        [1/7, 1/7, 1/7]
+                    ]
+                },
+                {
+                    nombre: "laplacian",
+                    vertical: [
+                        [0,-1,0],
+                        [-1,4,-1],
+                        [0,-1,0]
+                    ],
+                    horizontal: [
+                        [0,-1,0],
+                        [-1,4,-1],
+                        [0,-1,0]
+                    ]
+                },
+                {
+                    nombre: "matrix10",
+                    vertical: [
+                        [0,-1,0],
+                        [-1,10,-1],
+                        [0,-1,0]
+                    ],
+                    horizontal: [
+                        [0,-1,0],
+                        [-1,10,-1],
+                        [0,-1,0]
+                    ]
+                },
+                {
+                    nombre: "matrix11",
+                    vertical: [
+                        [0,-1,0],
+                        [1,5,1],
+                        [0,-1,0]
+                    ],
+                    horizontal: [
+                        [0,1,0],
+                        [-1,5,-1],
+                        [0,1,0]
+                    ]
+                },
+                {
+                    nombre: "matrix12",
+                    vertical: [
+                        [0,2,0],
+                        [1,1/6,-1],
+                        [0,2,0]
+                    ],
+                    horizontal: [
+                        [0,1,0],
+                        [-2,1/6,2],
+                        [0,1,0]
+                    ]
+                },
+                {
+                    nombre: "matrix13",
+                    vertical: [
+                        [0,2,0],
+                        [-1,3,-1],
+                        [0,2,0]
+                    ],
+                    horizontal: [
+                        [0,2,0],
+                        [-2,3,-2],
+                        [0,2,0]
+                    ]
+                },
             ];
         }
 
